k8s/backend/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: backend
  namespace: mails2radhika-vk-dev
spec:
  to:
    kind: Service
    name: backend
  port:
    targetPort: 8080
